fix text block align

--- a/src/markup/pages/donation/_style.scss
+++ b/src/markup/pages/donation/_style.scss
@@ -1,6 +1,7 @@
 #donation {
     padding: 1.3em 0.3em;
     margin: 0 auto;
+    width: auto;
 
     p {
         margin-top: 0.3em;
